--- a/phar_system/medicine_cart/allocate.css
+++ b/phar_system/medicine_cart/allocate.css
@@ -7,7 +7,13 @@
     flex-wrap: wrap;
     align-items: center;
 }
-
+.nearMiss_log_container_for_cpoe {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 4px;
+    font-size: 14px;
+    margin-top: 4px;
+}
 .d_cart_container {
     height: 140px;
     cursor: pointer;
