--- a/phar_system/medicine_cart/popup_med_pic.css
+++ b/phar_system/medicine_cart/popup_med_pic.css
@@ -80,6 +80,7 @@
 .silder_div {
     width: 100%;
     position: absolute;
+    transition: all 0.2s;
 }
 .silder_img {
     display: block;
@@ -94,16 +95,53 @@
     top: 50%;
     height: 100px;
     width: 40px;
-    background-color: rgb(44, 78, 78);
-    z-index: 100
+    background-color: rgba(101, 101, 101, 0.373);
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25);
+    transition: all 0.2s;
+    padding: 0px 4px;
+}
+.slider_pre_btn:hover,
+.slider_next_btn:hover {
+    background-color: rgba(122, 122, 122, 0.586);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+    transition: all 0.2s;
+}
+.slider_pre_btn > img,
+.slider_next_btn > img {
+    filter: invert(1);
+    display: block;
+    width: 100%;
+}
+.slider_pre_btn > img {
+    transform: rotate(0deg);
+}
+.slider_next_btn > img {
+    transform: rotate(180deg);
 }
 .slider_pre_btn {
-    left: 20px;
+    left: -16px;
 }
 
 .slider_next_btn {
-    right: 20px;
+    right: -16px;
 }
 
 @media screen and (max-width: 550px) {
+    .slider_pre_btn,
+    .slider_next_btn {
+        height: 60px;
+        width: 32px;
+    }
+    .slider_pre_btn {
+        left: 28px;
+    }
+
+    .slider_next_btn {
+        right: 28px;
+    }
 }
